<resources>
    <string name="app_name">Venue Dock</string>
    <string name="hello_you">Hello You!</string>
    <string name="subtitle">
        Nice to meet you, come join our community!\n
        <br><b>Login</b> If you already have an account.</br>\n
        <br><b>Register</b> to get started with the app.</br>
    </string>
    <string name="illustration_img">Illustration Image</string>

    <string name="login_title">Login to app</string>
    <string name="login_subtitle">
        <font color="#00c988"><b>Login</b></font> if you already have an account.
    </string>
    <string name="login_mail">Your email or username</string>
    <string name="login_pass">Your password</string>
    <string name="login_forgot_pw">Forgot Password?</string>
    <string name="login_havent_acc">
        I don\'t have an account <font color="#00c988"><b>Register</b></font>
    </string>

    <string name="register_title">Create an Account</string>
    <string name="register_subtitle">
        <font color="#00c988"><b>Register</b></font> to get started with the app.
    </string>
    <string name="register_fullname">Your Full name</string>
    <string name="register_email">Your Email</string>
    <string name="register_c_password">Confirm Password</string>
    <string name="register_username">Your username</string>
    <string name="register_have_acc">I already have an Account <font color="#00c988"><b>Login</b></font></string>

    <string name="btnlogin">Login</string>
    <string name="btnregister">Register</string>
    <string name="logoutbtn">Logout</string>

    <string name="home_title">Hello,</string>
    <string name="home_subtitle">Welcome to Dashboard</string>

    <string name="reset_title">Reset your password</string>
    <string name="reset_subtitle">
        <font color="#00c988"><b>Reset Password</b></font> if you forgot your password.
    </string>
    <string name="btn_reset">Reset Password</string>
    <string name="back_login">
        Back to <font color="#00c988"><b>Login</b></font>
    </string>
    <string name="show_data">Show Data</string>
    <string name="first_name">First Name</string>
    <string name="venue_landmark">Enter venue locality (i.e. Area, Sector, Street) </string>
    <string name="venue_name">Enter venue name</string>
    <string name="add_venue">Add Venue</string>
    <string name="dealer_contact_number">Dealer Contact Number or Email</string>
    <string name="indian_ruppee">₹</string>
    <string name="indian_ruppee2">\u20B9</string>

    <string name="okay">Okay</string>
    <string name="i_understand">I understand</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="warning_title">Warning</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="error_title">Error</string>
    <string name="network_error_title">Oops! something went wrong</string>
    <string name="network_error_text">You\'re not connected with Internet! Check your connection and retry.</string>
    <string name="success_title">Success</string>
    <string name="info_title">Attention</string>
    <string name="delete_venue">Delete Venue</string>
    <string name="delete_venue_text">Are you sure you want to delete the venue?</string>
    <string name="venue_added">New venue is added</string>
    <string name="venue_update_text">Are you sure you want to modify the venue data?</string>
    <string name="venue_delete_success">Venue is deleted successfully</string>
    <string name="logout_text">Are you sure you want to logout?</string>
    <string name="continue_text">Are you sure you want to continue?</string>
    <string name="no_bookings">Bookings are coming very soon</string>
    <string name="app_description">
        App Description: \n\t\tThe Venue Dock app is a tool designed for venue dealers to add their venues online.
        It\'s a user-friendly app that allows venue dealers to add their venues and publish them on another app, making them visible to the public.
        \n\t\tVenue dealers can easily create, edit, and delete their venues from within the app, providing a seamless experience for both venue dealers and end-users.

        \n\nFeatures:
        \n\u2022 User-friendly interface for easy venue management
        \n\u2022 Add, edit, and delete venue information with ease
        \n\u2022 Seamless integration with another app to publish venues online
        \n\u2022 Ability to upload photos of the venue
        \n\u2022 Option to add pricing and availability details

        \n\n\nThe development team has used the latest technology and tools to ensure that the Venue Dealer app is secure, reliable, and easy to use.
        \nThey have also incorporated user feedback into the development process, ensuring that the app meets the needs of venue dealers and end-users alike.
    </string>
    <string name="devContact">Facing issues? or want to add more locations?</string>
    <string name="additional_notes">Add any additional notes here</string>

    <string-array name="gj_cities">
        <item>Surat</item>
        <item>Vadodara</item>
        <item>Ahmedabad</item>
        <item>Valsad</item>
        <item>Navsari</item>
        <item>Rajkot</item>
        <item>Anand</item>
        <item>Bharuch</item>
        <item>Bhuj</item>
        <item>Gandhinagar</item>
        <item>Junagadh</item>
        <item>Dwarka</item>
        <item>Vapi</item>
        <item>Mehsana</item>
    </string-array>

    <string-array name="mh_cities">
        <item>Mumbai</item>
        <item>Nashik</item>
        <item>Kolhapur</item>
        <item>Pune</item>
        <item>Panvel</item>
        <item>Thane</item>
        <item>Shirdi</item>
        <item>Navi Mumbai</item>
        <item>Nagpur</item>
    </string-array>

    <string-array name="rj_cities">
        <item>Jaipur</item>
        <item>Ajmer</item>
        <item>Bhilwara</item>
        <item>Jodhpur</item>
        <item>Bikaner</item>
        <item>Jaisalmer</item>
        <item>Kota</item>
        <item>Pushkar</item>
        <item>Udaipur</item>
    </string-array>

    <string-array name="states">
        <item>Gujarat</item>
        <item>Maharashtra</item>
        <item>Rajasthan</item>
    </string-array>
</resources>
