<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AboutAppActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary_color"
        android:requiresFadingEdge="vertical"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <ImageButton
            android:id="@+id/goHomeBtn"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:backgroundTint="@color/white"
            android:padding="10sp"
            android:src="@drawable/ic_back_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_toEndOf="@id/goHomeBtn"
            android:gravity="start|center"
            android:paddingStart="10sp"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/appDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolBar"
        android:layout_marginTop="5sp"
        android:padding="5sp"
        android:text="@string/app_description"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/devContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appDescription"
        android:layout_marginTop="5sp"
        android:padding="5sp"
        android:text="@string/devContact"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/devMailBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/devContact"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5sp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="6dp"
        android:text="Send Mail to Developer" />
</RelativeLayout>
