<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeActivity"
    android:id="@+id/homeLayout"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="12sp">

    <ImageView
        android:id="@+id/userPhoto"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_marginEnd="10sp" />

    <TextView
        android:id="@+id/home_title"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/userPhoto"
        android:text="@string/home_title"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/account_name"
        android:layout_toEndOf="@id/home_title"
        android:layout_marginStart="5sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        style="@style/Title"/>

    <TextView
        android:id="@+id/home_subtitle"
        style="@style/SubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userPhoto"
        android:layout_marginTop="5sp"
        android:text="@string/home_subtitle"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_below="@id/home_subtitle"
        android:layout_centerInParent="true"
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bookingsRview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_light" />

        <TextView
            android:layout_centerInParent="true"
            android:text="@string/no_bookings"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_tab_bg"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="10sp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/addVenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:tooltipText="Add Venue"
                android:src="@drawable/add_venue"/>

            <ImageView
                android:id="@+id/viewVenue"
                android:tooltipText="View Venue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:src="@drawable/view_venue"/>

            <ImageView
                android:id="@+id/aboutDevBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:tooltipText="About this app"
                android:src="@drawable/about_app"/>

            <ImageView
                android:id="@+id/logoutbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:tooltipText="Log out"
                android:src="@drawable/logout"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
